fix: add spacing b/w text elements of hero banner
formatting was achieved through the flex-box gap property

--- a/style.css
+++ b/style.css
@@ -69,3 +69,8 @@
   color: white;
   background-color: gray;
 }
+.hero-text {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
